--- a/orchestrator/package.json
+++ b/orchestrator/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "promise-retry": "^2.0.1",
     "winston": "^3.17.0"
   }
 }
