📦 NEW: add user service in docker compose and make it work automatically

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,8 +47,44 @@ services:
       - microservices-net
     restart: always 
 
+  user-service:
+    build:
+      context: ./user-service
+      dockerfile: Dockerfile
+    ports:
+      - "3001:3001"
+    environment:
+      - APP_ENV=dev
+      - APP_DEBUG=1
+      - DATABASE_URL=postgresql://Davdiii:Azerty123@user-db:5432/userServiceDB?serverVersion=17&charset=utf8
+    depends_on:
+      user-db:
+        condition: service_healthy
+    networks:
+      - microservices-net
+
+  user-db:
+    image: postgres:17
+    environment:
+      POSTGRES_DB: userServiceDB
+      POSTGRES_USER: Davdiii
+      POSTGRES_PASSWORD: Azerty123
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    networks:
+      - microservices-net
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U Davdiii -d userServiceDB"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
 volumes:
   notification-logs:
+  user_db_data:
+  postgres_data:
 
 networks:
   microservices-net:
