📦 NEW: add reservation service in docker compose and make it work automatically

--- a/reservation-service/Dockerfile
+++ b/reservation-service/Dockerfile
@@ -1,12 +1,21 @@
-FROM golang:1.23.3
+FROM golang:1.21.4
 
 WORKDIR /app
 
-# pre-copy/cache go.mod for pre-downloading dependencies and only redownloading them in subsequent builds if they change
-COPY go.mod ./
+# Installation des dépendances nécessaires
+RUN apt-get update && apt-get install -y postgresql-client
+
+# pre-copy/cache go.mod for pre-downloading dependencies
+COPY go.mod go.sum ./
 RUN go mod download && go mod verify
 
+# Copier le fichier .env
+COPY .env ./
+
+# Copier le reste des fichiers
 COPY . .
 RUN go build -v -o main .
+
+EXPOSE 3003
 
 CMD ["/app/main"]
