--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,10 +81,53 @@ services:
       timeout: 5s
       retries: 5
 
+  reservation-service:
+    build:
+      context: ./reservation-service
+      dockerfile: Dockerfile
+    ports:
+      - "3003:3003"
+    environment:
+      - DB_HOST=reservation-db
+      - DB_USER=Davdiii
+      - DB_PASSWORD=Azerty123
+      - DB_NAME=reservationDB
+      - DB_PORT=5432
+    depends_on:
+      reservation-db:
+        condition: service_healthy
+    networks:
+      - microservices-net
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3003/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+
+  reservation-db:
+    image: postgres:17
+    environment:
+      POSTGRES_DB: reservationDB
+      POSTGRES_USER: Davdiii
+      POSTGRES_PASSWORD: Azerty123
+    ports:
+      - "5433:5432"
+    volumes:
+      - reservation_db_data:/var/lib/postgresql/data
+    networks:
+      - microservices-net
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U Davdiii -d reservationDB"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
 volumes:
   notification-logs:
   user_db_data:
   postgres_data:
+  reservation_db_data:
 
 networks:
   microservices-net:
