Added fix token validation problem

--- a/api-gateway/.env
+++ b/api-gateway/.env
@@ -1,5 +1,5 @@
 PORT=3000
-JWT_SECRET=your_secret_here
+JWT_SECRET=microservice
 USER_SERVICE_URL=http://user-service:3001
 ACTIVITY_SERVICE_URL=http://activity-service:3002
 RESERVATION_SERVICE_URL=http://reservation-service:3003
